--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "eduapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:7071",
   "dependencies": {
+    "@fluentui/react-northstar": "^0.56.0",
+    "@microsoft/teams-js": "^1.10.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
   }
 }
