--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,10 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
+    "@azure/msal-node": "^1.1.0",
+    "@microsoft/microsoft-graph-client": "^2.2.1",
+    "dotenv": "^9.0.2",
+    "isomorphic-fetch": "^3.0.0",
     "lowdb": "^1.0.0",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
